# ps-price

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile.example  DEPLOYMENT.md  Dockerfile  PRODUCT.md  README.md  docker-compose.aws.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .dockerignore  BACKEND_GUIDE.md  Dockerfile  __init__.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9d54f6a1a0f6_initial_schema.py
backend/app/: __init__.py  admin_routes.py  admin_service.py  auth_repository.py  auth_routes.py  auth_service.py  auth_tokens.py  cli.py  config.py  database.py  deps.py  domain.py  email_templates.py  email_themes.py  jwt_tokens.py  main.py  money.py  name_utils.py  notifier.py  passwords.py  ps_graphql.py  ps_store.py  rate_limit.py  repository.py  scheduler.py  schemas.py  security.py  service.py  service_helpers.py  webauthn_config.py
backend/app/db/: __init__.py  base.py  connection.py  dialect.py  migrations.py  models.py  session.py  util.py
backend/docs/: API.md  BACKEND_GUIDE.md
backend/ps_price.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_admin.py  test_catalog.py  test_db_util.py  test_integration.py  test_money.py  test_name_utils.py  test_ps_graphql.py  test_repository.py  test_search_007.py  test_security.py
docs/: ARCHITECTURE.md  DEPLOYMENT-AWS.md  DEPLOYMENT.md  SECURITY.md
frontend/: .dockerignore  AGENTS.md  DESIGN.md  Dockerfile  next.config.ts  package-lock.json  package.json
tests/: test_catalog.py  (+3 more)
(+57 files in other folders)
